# roundtable

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
engine/: app.py  camera.py  lights.py  shader.py  temp.py
shaders/: depth_fragment.glsl  depth_geometry.glsl  depth_vertex.glsl  fragment.glsl  light_marker_fragment.glsl  light_marker_vertex.glsl  vertex.glsl
