[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "glfw>=2.9.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "pyglet>=2.1.6",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "pywavefront>=1.3.3",
]
